components/About/About.module.css
/* About styles */

.about {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 8rem;
  background: linear-gradient(
    180deg,
    var(--color-neutral-dark) 0%,
    var(--color-primary) 10.26%
  );
  scroll-margin-top: -88px;
}

.about-me-content {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.about-content-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  max-width: 40ch;
  padding: 0 20px;
}

.about-image-container {
  position: relative;
  width: 300px;
  height: 300px;
}

.about-image {
  border-radius: 0 0 16px 16px;
  object-fit: contain;
}

.tools-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

/* ToolsRow styles */

.tools {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
  place-content: center;
  margin-top: 1rem;
  max-width: 60vw;
}

.tool-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin: 0 8px;
  width: 100px;
  height: 160px;
}

.tool-image-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.tool-image {
  object-fit: contain;
}

.tool-name {
  color: var(--color-primary);
  font-weight: var(--fw-b);
}

.tool-item:hover .tool-name {
  color: var(--color-secondary);
}

@media screen and (max-width: 1200px) {
  .about {
    padding-top: 240px;
    scroll-margin-top: -160px;
  }

  .about-me-content {
    flex-direction: column-reverse;
  }

  .about-content-container {
    align-items: center;
    text-align: center;
    max-width: 50ch;
  }

  .about-image-container {
    width: 240px;
    height: 240px;
  }

  .tools {
    grid-template-columns: repeat(5, 1fr);
  }
}

@media screen and (max-width: 768px) {
  .about-content {
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .about-paragraph {
    padding: 0;
    margin-top: 20px;
  }
}

@media screen and (max-width: 576px) {
  .tools {
    grid-template-columns: repeat(2, 1fr);
  }
}

